Assignment/Assignment 4/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from e:\Bo\Subjects\Principles of Programming Languages\222\Assignment\Assignment 4\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'float'", "'for'", "'function'", "'if'", 
                     "'integer'", "'return'", "'string'", "'while'", "'void'", 
                     "'out'", "'continue'", "'of'", "'inherit'", "'array'", 
                     "'readInteger'", "'printInteger'", "'readFloat'", "'writeFloat'", 
                     "'readBoolean'", "'printBoolean'", "'readString'", 
                     "'printString'", "'super'", "'preventDefault'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'('", "')'", "'['", "']'", "'.'", "','", "';'", "':'", 
                     "'{'", "'}'", "'='", "'\"'", "'{}'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", 
                      "STRING", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "READINTEGER", "PRINTINTEGER", 
                      "READFLOAT", "WRITEFLOAT", "READBOOLEAN", "PRINTBOOLEAN", 
                      "READSTRING", "PRINTSTRING", "SUPER", "PREVENTDEFAULT", 
                      "ADD", "MINUS", "MUL", "DIV", "MODUL", "NOT", "AND", 
                      "OR", "EQUAL", "NOTEQUAL", "LESSTHAN", "LESSEQUAL", 
                      "GREATERTHAN", "GREATEREQUAL", "DOUBLECOLON", "LP", 
                      "RP", "LSB", "RSB", "DOT", "COMMA", "SEMI", "COLON", 
                      "LB", "RB", "ASSIGN", "DOUBLEQUOTE", "EMPTYBLOCK", 
                      "COMMENT", "INTEGERLIT", "FLOATLIT", "BOOLEANLIT", 
                      "STRINGLIT", "ARRAYLIT", "IDENTIFIER", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_vardecl = 2
    RULE_vardeclAssign = 3
    RULE_vardeclAssignment = 4
    RULE_vardeclAssignBaseCase = 5
    RULE_vardeclNoAssign = 6
    RULE_parameter = 7
    RULE_identifierList = 8
    RULE_typ = 9
    RULE_funcdecl = 10
    RULE_returnType = 11
    RULE_parameterList = 12
    RULE_parameterPrime = 13
    RULE_inheritanceSubpart = 14
    RULE_arrayType = 15
    RULE_dimensions = 16
    RULE_elementTyp = 17
    RULE_arrayLit = 18
    RULE_expression = 19
    RULE_expr1 = 20
    RULE_expr2 = 21
    RULE_expr3 = 22
    RULE_expr4 = 23
    RULE_expr5 = 24
    RULE_expr6 = 25
    RULE_expr7 = 26
    RULE_expr8 = 27
    RULE_factor = 28
    RULE_expressionListNullable = 29
    RULE_expressionPrime = 30
    RULE_expressionListNonnull = 31
    RULE_statement = 32
    RULE_assignStmt = 33
    RULE_lhs = 34
    RULE_ifStmt = 35
    RULE_forStmt = 36
    RULE_initExpr = 37
    RULE_conditionExpr = 38
    RULE_updateExpr = 39
    RULE_whileStmt = 40
    RULE_doWhileStmt = 41
    RULE_breakStmt = 42
    RULE_continueStmt = 43
    RULE_returnStmt = 44
    RULE_callStmt = 45
    RULE_blockStmt = 46
    RULE_blockBody = 47
    RULE_stmtsOrVardecls = 48
    RULE_stmtOrVardecl = 49
    RULE_statementList = 50
    RULE_vardeclList = 51
    RULE_functionCall = 52
    RULE_functionCallList = 53
    RULE_specialFunc = 54
    RULE_readInteger = 55
    RULE_printInteger = 56
    RULE_readFloat = 57
    RULE_writeFloat = 58
    RULE_readBoolean = 59
    RULE_printBoolean = 60
    RULE_readString = 61
    RULE_printString = 62
    RULE_superFunction = 63
    RULE_preventDefault = 64

    ruleNames =  [ "program", "decls", "vardecl", "vardeclAssign", "vardeclAssignment", 
                   "vardeclAssignBaseCase", "vardeclNoAssign", "parameter", 
                   "identifierList", "typ", "funcdecl", "returnType", "parameterList", 
                   "parameterPrime", "inheritanceSubpart", "arrayType", 
                   "dimensions", "elementTyp", "arrayLit", "expression", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "expr7", "expr8", "factor", "expressionListNullable", 
                   "expressionPrime", "expressionListNonnull", "statement", 
                   "assignStmt", "lhs", "ifStmt", "forStmt", "initExpr", 
                   "conditionExpr", "updateExpr", "whileStmt", "doWhileStmt", 
                   "breakStmt", "continueStmt", "returnStmt", "callStmt", 
                   "blockStmt", "blockBody", "stmtsOrVardecls", "stmtOrVardecl", 
                   "statementList", "vardeclList", "functionCall", "functionCallList", 
                   "specialFunc", "readInteger", "printInteger", "readFloat", 
                   "writeFloat", "readBoolean", "printBoolean", "readString", 
                   "printString", "superFunction", "preventDefault" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FLOAT=6
    FOR=7
    FUNCTION=8
    IF=9
    INTEGER=10
    RETURN=11
    STRING=12
    WHILE=13
    VOID=14
    OUT=15
    CONTINUE=16
    OF=17
    INHERIT=18
    ARRAY=19
    READINTEGER=20
    PRINTINTEGER=21
    READFLOAT=22
    WRITEFLOAT=23
    READBOOLEAN=24
    PRINTBOOLEAN=25
    READSTRING=26
    PRINTSTRING=27
    SUPER=28
    PREVENTDEFAULT=29
    ADD=30
    MINUS=31
    MUL=32
    DIV=33
    MODUL=34
    NOT=35
    AND=36
    OR=37
    EQUAL=38
    NOTEQUAL=39
    LESSTHAN=40
    LESSEQUAL=41
    GREATERTHAN=42
    GREATEREQUAL=43
    DOUBLECOLON=44
    LP=45
    RP=46
    LSB=47
    RSB=48
    DOT=49
    COMMA=50
    SEMI=51
    COLON=52
    LB=53
    RB=54
    ASSIGN=55
    DOUBLEQUOTE=56
    EMPTYBLOCK=57
    COMMENT=58
    INTEGERLIT=59
    FLOATLIT=60
    BOOLEANLIT=61
    STRINGLIT=62
    ARRAYLIT=63
    IDENTIFIER=64
    WS=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclsContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclsContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 130
                self.decls()
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.IDENTIFIER):
                    break

            self.state = 135
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardeclAssign(self):
            return self.getTypedRuleContext(MT22Parser.VardeclAssignContext,0)


        def vardeclNoAssign(self):
            return self.getTypedRuleContext(MT22Parser.VardeclNoAssignContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.vardeclAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.vardeclNoAssign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardeclAssignment(self):
            return self.getTypedRuleContext(MT22Parser.VardeclAssignmentContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclAssign




    def vardeclAssign(self):

        localctx = MT22Parser.VardeclAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardeclAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.vardeclAssignment()
            self.state = 146
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def vardeclAssignment(self):
            return self.getTypedRuleContext(MT22Parser.VardeclAssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def vardeclAssignBaseCase(self):
            return self.getTypedRuleContext(MT22Parser.VardeclAssignBaseCaseContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclAssignment




    def vardeclAssignment(self):

        localctx = MT22Parser.VardeclAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardeclAssignment)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(MT22Parser.IDENTIFIER)
                self.state = 149
                self.match(MT22Parser.COMMA)
                self.state = 150
                self.vardeclAssignment()
                self.state = 151
                self.match(MT22Parser.COMMA)
                self.state = 152
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.vardeclAssignBaseCase()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclAssignBaseCaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclAssignBaseCase




    def vardeclAssignBaseCase(self):

        localctx = MT22Parser.VardeclAssignBaseCaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardeclAssignBaseCase)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(MT22Parser.IDENTIFIER)
            self.state = 158
            self.match(MT22Parser.COLON)
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 159
                self.typ()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 160
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 163
            self.match(MT22Parser.ASSIGN)
            self.state = 164
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclNoAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(MT22Parser.IdentifierListContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclNoAssign




    def vardeclNoAssign(self):

        localctx = MT22Parser.VardeclNoAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardeclNoAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.identifierList()
            self.state = 167
            self.match(MT22Parser.COLON)
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 168
                self.typ()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 169
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 172
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter




    def parameter(self):

        localctx = MT22Parser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 174
                self.match(MT22Parser.INHERIT)


            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 177
                self.match(MT22Parser.OUT)


            self.state = 180
            self.match(MT22Parser.IDENTIFIER)
            self.state = 181
            self.match(MT22Parser.COLON)
            self.state = 184
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 182
                self.typ()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 183
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def identifierList(self):
            return self.getTypedRuleContext(MT22Parser.IdentifierListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_identifierList




    def identifierList(self):

        localctx = MT22Parser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_identifierList)
        try:
            self.state = 190
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.match(MT22Parser.IDENTIFIER)
                self.state = 187
                self.match(MT22Parser.COMMA)
                self.state = 188
                self.identifierList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 189
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_typ




    def typ(self):

        localctx = MT22Parser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def returnType(self):
            return self.getTypedRuleContext(MT22Parser.ReturnTypeContext,0)


        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def parameterList(self):
            return self.getTypedRuleContext(MT22Parser.ParameterListContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockStmtContext,0)


        def inheritanceSubpart(self):
            return self.getTypedRuleContext(MT22Parser.InheritanceSubpartContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.match(MT22Parser.IDENTIFIER)
            self.state = 195
            self.match(MT22Parser.COLON)
            self.state = 196
            self.match(MT22Parser.FUNCTION)
            self.state = 197
            self.returnType()
            self.state = 198
            self.match(MT22Parser.LP)
            self.state = 199
            self.parameterList()
            self.state = 200
            self.match(MT22Parser.RP)
